// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commit tree Lazy should support Lazy components (createRoot): 0: CommitTree 1`] = `
OBJECT {
  "nodes": Map {
    1 => OBJECT {
      "children": ARRAY [
        2,
      ],
      "displayName": null,
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "parentID": 0,
      "treeBaseDuration": 0,
      "identifierDescription": 11,
    },
    2 => OBJECT {
      "children": ARRAY [
        3,
      ],
      "displayName": "App",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "parentID": 1,
      "treeBaseDuration": 0,
      "identifierDescription": 5,
    },
    3 => OBJECT {
      "children": ARRAY [],
      "displayName": "Suspense",
      "hocDisplayNames": null,
      "id": 3,
      "key": null,
      "parentID": 2,
      "treeBaseDuration": 0,
      "identifierDescription": 12,
    },
  },
  "rootID": 1,
}
`;

exports[`commit tree Lazy should support Lazy components (createRoot): 1: CommitTree 1`] = `
OBJECT {
  "nodes": Map {
    1 => OBJECT {
      "children": ARRAY [
        2,
      ],
      "displayName": null,
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "parentID": 0,
      "treeBaseDuration": 0,
      "identifierDescription": 11,
    },
    2 => OBJECT {
      "children": ARRAY [
        3,
      ],
      "displayName": "App",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "parentID": 1,
      "treeBaseDuration": 0,
      "identifierDescription": 5,
    },
    3 => OBJECT {
      "children": ARRAY [
        6,
      ],
      "displayName": "Suspense",
      "hocDisplayNames": null,
      "id": 3,
      "key": null,
      "parentID": 2,
      "treeBaseDuration": 0,
      "identifierDescription": 12,
    },
    6 => OBJECT {
      "children": ARRAY [],
      "displayName": "LazyInnerComponent",
      "hocDisplayNames": null,
      "id": 6,
      "key": null,
      "parentID": 3,
      "treeBaseDuration": 0,
      "identifierDescription": 5,
    },
  },
  "rootID": 1,
}
`;

exports[`commit tree Lazy should support Lazy components (legacy render): 0: CommitTree 1`] = `
OBJECT {
  "nodes": Map {
    1 => OBJECT {
      "children": ARRAY [
        2,
      ],
      "displayName": null,
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "parentID": 0,
      "treeBaseDuration": 0,
      "identifierDescription": 11,
    },
    2 => OBJECT {
      "children": ARRAY [
        3,
      ],
      "displayName": "App",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "parentID": 1,
      "treeBaseDuration": 0,
      "identifierDescription": 5,
    },
    3 => OBJECT {
      "children": ARRAY [],
      "displayName": "Suspense",
      "hocDisplayNames": null,
      "id": 3,
      "key": null,
      "parentID": 2,
      "treeBaseDuration": 0,
      "identifierDescription": 12,
    },
  },
  "rootID": 1,
}
`;

exports[`commit tree Lazy should support Lazy components (legacy render): 1: CommitTree 1`] = `
OBJECT {
  "nodes": Map {
    1 => OBJECT {
      "children": ARRAY [
        2,
      ],
      "displayName": null,
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "parentID": 0,
      "treeBaseDuration": 0,
      "identifierDescription": 11,
    },
    2 => OBJECT {
      "children": ARRAY [
        3,
      ],
      "displayName": "App",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "parentID": 1,
      "treeBaseDuration": 0,
      "identifierDescription": 5,
    },
    3 => OBJECT {
      "children": ARRAY [
        6,
      ],
      "displayName": "Suspense",
      "hocDisplayNames": null,
      "id": 3,
      "key": null,
      "parentID": 2,
      "treeBaseDuration": 0,
      "identifierDescription": 12,
    },
    6 => OBJECT {
      "children": ARRAY [],
      "displayName": "LazyInnerComponent",
      "hocDisplayNames": null,
      "id": 6,
      "key": null,
      "parentID": 3,
      "treeBaseDuration": 0,
      "identifierDescription": 5,
    },
  },
  "rootID": 1,
}
`;

exports[`commit tree Lazy should support Lazy components that are unmounted before resolving (createRoot): 0: CommitTree 1`] = `
OBJECT {
  "nodes": Map {
    1 => OBJECT {
      "children": ARRAY [
        2,
      ],
      "displayName": null,
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "parentID": 0,
      "treeBaseDuration": 0,
      "identifierDescription": 11,
    },
    2 => OBJECT {
      "children": ARRAY [
        3,
      ],
      "displayName": "App",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "parentID": 1,
      "treeBaseDuration": 0,
      "identifierDescription": 5,
    },
    3 => OBJECT {
      "children": ARRAY [],
      "displayName": "Suspense",
      "hocDisplayNames": null,
      "id": 3,
      "key": null,
      "parentID": 2,
      "treeBaseDuration": 0,
      "identifierDescription": 12,
    },
  },
  "rootID": 1,
}
`;

exports[`commit tree Lazy should support Lazy components that are unmounted before resolving (createRoot): 1: CommitTree 1`] = `
OBJECT {
  "nodes": Map {
    1 => OBJECT {
      "children": ARRAY [
        2,
      ],
      "displayName": null,
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "parentID": 0,
      "treeBaseDuration": 0,
      "identifierDescription": 11,
    },
    2 => OBJECT {
      "children": ARRAY [],
      "displayName": "App",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "parentID": 1,
      "treeBaseDuration": 0,
      "identifierDescription": 5,
    },
  },
  "rootID": 1,
}
`;

exports[`commit tree Lazy should support Lazy components that are unmounted before resolving (legacy render): 0: CommitTree 1`] = `
OBJECT {
  "nodes": Map {
    1 => OBJECT {
      "children": ARRAY [
        2,
      ],
      "displayName": null,
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "parentID": 0,
      "treeBaseDuration": 0,
      "identifierDescription": 11,
    },
    2 => OBJECT {
      "children": ARRAY [
        3,
      ],
      "displayName": "App",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "parentID": 1,
      "treeBaseDuration": 0,
      "identifierDescription": 5,
    },
    3 => OBJECT {
      "children": ARRAY [],
      "displayName": "Suspense",
      "hocDisplayNames": null,
      "id": 3,
      "key": null,
      "parentID": 2,
      "treeBaseDuration": 0,
      "identifierDescription": 12,
    },
  },
  "rootID": 1,
}
`;

exports[`commit tree Lazy should support Lazy components that are unmounted before resolving (legacy render): 1: CommitTree 1`] = `
OBJECT {
  "nodes": Map {
    1 => OBJECT {
      "children": ARRAY [
        2,
      ],
      "displayName": null,
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "parentID": 0,
      "treeBaseDuration": 0,
      "identifierDescription": 11,
    },
    2 => OBJECT {
      "children": ARRAY [],
      "displayName": "App",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "parentID": 1,
      "treeBaseDuration": 0,
      "identifierDescription": 5,
    },
  },
  "rootID": 1,
}
`;

exports[`commit tree should be able to rebuild the store tree for each commit: 0: CommitTree 1`] = `
OBJECT {
  "nodes": Map {
    1 => OBJECT {
      "children": ARRAY [
        2,
      ],
      "displayName": null,
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "parentID": 0,
      "treeBaseDuration": 12,
      "identifierDescription": 11,
    },
    2 => OBJECT {
      "children": ARRAY [
        3,
      ],
      "displayName": "Parent",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "parentID": 1,
      "treeBaseDuration": 12,
      "identifierDescription": 5,
    },
    3 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 3,
      "key": "0",
      "parentID": 2,
      "treeBaseDuration": 2,
      "identifierDescription": 8,
    },
  },
  "rootID": 1,
}
`;

exports[`commit tree should be able to rebuild the store tree for each commit: 1: CommitTree 1`] = `
OBJECT {
  "nodes": Map {
    1 => OBJECT {
      "children": ARRAY [
        2,
      ],
      "displayName": null,
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "parentID": 0,
      "treeBaseDuration": 16,
      "identifierDescription": 11,
    },
    2 => OBJECT {
      "children": ARRAY [
        3,
        4,
        5,
      ],
      "displayName": "Parent",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "parentID": 1,
      "treeBaseDuration": 16,
      "identifierDescription": 5,
    },
    3 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 3,
      "key": "0",
      "parentID": 2,
      "treeBaseDuration": 2,
      "identifierDescription": 8,
    },
    4 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 4,
      "key": "1",
      "parentID": 2,
      "treeBaseDuration": 2,
      "identifierDescription": 8,
    },
    5 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 5,
      "key": "2",
      "parentID": 2,
      "treeBaseDuration": 2,
      "identifierDescription": 8,
    },
  },
  "rootID": 1,
}
`;

exports[`commit tree should be able to rebuild the store tree for each commit: 2: CommitTree 1`] = `
OBJECT {
  "nodes": Map {
    1 => OBJECT {
      "children": ARRAY [
        2,
      ],
      "displayName": null,
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "parentID": 0,
      "treeBaseDuration": 14,
      "identifierDescription": 11,
    },
    2 => OBJECT {
      "children": ARRAY [
        3,
        4,
      ],
      "displayName": "Parent",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "parentID": 1,
      "treeBaseDuration": 14,
      "identifierDescription": 5,
    },
    3 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 3,
      "key": "0",
      "parentID": 2,
      "treeBaseDuration": 2,
      "identifierDescription": 8,
    },
    4 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 4,
      "key": "1",
      "parentID": 2,
      "treeBaseDuration": 2,
      "identifierDescription": 8,
    },
  },
  "rootID": 1,
}
`;

exports[`commit tree should be able to rebuild the store tree for each commit: 3: CommitTree 1`] = `
OBJECT {
  "nodes": Map {
    1 => OBJECT {
      "children": ARRAY [
        2,
      ],
      "displayName": null,
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "parentID": 0,
      "treeBaseDuration": 10,
      "identifierDescription": 11,
    },
    2 => OBJECT {
      "children": ARRAY [],
      "displayName": "Parent",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "parentID": 1,
      "treeBaseDuration": 10,
      "identifierDescription": 5,
    },
  },
  "rootID": 1,
}
`;
